--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+
+.fondo
+{
+    background-image:url(./Imagenes/fondo.jpg);
+    width: 100%;
+    background-size: cover;
+}
